--- a/website/templates/saved_plans.html
+++ b/website/templates/saved_plans.html
@@ -10,7 +10,7 @@
             <i class="bi bi-chevron-left"></i>
         </button>
         {% endif %}
-        <h1 class="text-primary mb-0">Saved Workout Routines</h1>
+        <h1 class="text-primary mb-0 text-center">Saved Workout Routines</h1>
         {% if 1 < plans|length %}
         <button class="btn btn-outline-primary ms-3" type="button" data-bs-target="#workoutCarousel" data-bs-slide="next">
             <i class="bi bi-chevron-right"></i>
